gcc/testsuite/rust/rustc/ui/errors/dynless-turbofish-e0191-issue-91997.rs
trait MyIterator : Iterator {}

fn main() {
    let _ = MyIterator::next;
}
// { dg-error ".E0191." "" { target *-*-* } .-2 }
// { dg-warning "" "" { target *-*-* } .-2 }
// { dg-warning "" "" { target *-*-* } .-3 }

